add readme for env config

--- a/env/layer4proxy.conf
+++ b/env/layer4proxy.conf
@@ -1,5 +1,5 @@
-title = "Stunnel Configuration"
-name = "stunnel-1"
+title = "laye4proxy Configuration"
+name = "laye4proxy-1"
 host = "127.0.0.1"
 geoip_database = "GeoCity.mmdb"
 
